# app_celulares_10oct

frontend/: Cargo.toml  index.html  trunk.toml
frontend/src/: app.rs  lib.rs
frontend/src/models/: usuario.rs
frontend/src/paginas/: mod.rs
frontend/src/paginas/folder_registro/: estado_pagina_registro.rs  mod.rs  module_css_pagina_registro.css  pagina_registro_usuario.rs
frontend/src/paginas/home/: home.rs
frontend/src/paginas/not_found/: not_found.rs
frontend/src/router/: routes.rs
