[package]
name = "app_celulares_copiafuncional"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"]}
stylist = "0.7.0"
wasm-bindgen = "0.2.78"
web-sys = "0.3.55"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew-router = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
name = "app_celulares_copiafuncional"
path = "src/lib.rs"